--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,19 @@
 {
   "manifest_version": 3,
-  "name": "PDF Printer",
-  "version": "1.0",
-  "permissions": ["debugger", "activeTab"],
+  "name": "PDF Printer & pCloud Uploader",
+  "version": "1.1",
+  "permissions": [
+    "debugger", 
+    "activeTab", 
+    "storage"
+  ],
   "action": {
     "default_popup": "popup.html"
   },
   "background": {
     "service_worker": "background.js"
-  }
+  },
+  "host_permissions": [
+    "https://api.pcloud.com/*"
+  ]
 }
